<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".CurrentScoreActivity">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:id="@+id/currentScoreLabel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/currentScoreLabel"
        android:textAlignment="center"
        android:textSize="40sp" />

      <TextView
        android:id="@+id/currentScoreIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/currentScoreIntro"
        android:textAlignment="center"
        android:textSize="20sp" />

      <TextView
        android:id="@+id/subjectDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/subjectDisplay"
        android:textAlignment="center"
        android:textSize="30sp" />

      <TextView
        android:id="@+id/currentScoreDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/scoreDisplay"
        android:textAlignment="center"
        android:textSize="30sp" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
          android:id="@+id/saveScoreBtn"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:layout_weight="1"
          android:onClick="saveBtnClicked"
          android:padding="20dp"
          android:text="@string/saveScoreBtnLabel"
          android:textSize="20sp"
          tools:ignore="ButtonStyle" />

        <Button
          android:id="@+id/viewScoreBtn"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:layout_weight="1"
          android:onClick="viewBtnClicked"
          android:padding="20dp"
          android:text="@string/viewScoreBtnLabel"
          android:textSize="20sp"
          tools:ignore="ButtonStyle" />
      </LinearLayout>

    </LinearLayout>
  </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>
